# agentix-cookbook

./: .gitignore  LICENSE  README.md
claude-code/: README.md  claude_code.py  default.nix  pyproject.toml
claude-code/src/agentix/claude_code/: __init__.py
examples/: swebench_with_claude_code.py
examples/eval-cc-swe/: README.md  cc.py  pyproject.toml  run.py  runner.py  swe.py
examples/eval-cc-swe/src/cc/: __init__.py
examples/eval-cc-swe/src/eval_cc_swe/: __init__.py
examples/eval-cc-swe/src/runner/: __init__.py  __main__.py
examples/hello-agentix/: README.md  pyproject.toml  run.py
examples/hello-agentix/src/hello_agentix/: __init__.py
swebench/: README.md  pyproject.toml  swebench.py
swebench/src/agentix/swebench/: __init__.py
