[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentix-swebench"
version = "0.1.0"
description = "SWE-bench scoring as an Agentix namespace"
requires-python = ">=3.11"
dependencies = [
    "swebench>=4.0",
]

[project.entry-points."agentix.namespace"]
swebench = "swebench"

[tool.hatch.build.targets.wheel]
only-include = ["swebench.py"]
