[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentix-swebench"
version = "0.1.0"
description = "SWE-bench Verified scoring as an Agentix namespace"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Agentiix" }]
urls = { Homepage = "https://github.com/Agentiix/agentix-cookbook" }
dependencies = [
    # Upstream harness: `make_test_spec`, `get_eval_report`, repo→parser map.
    # The cookbook namespace is at `agentix.swebench`; the upstream package
    # is still at `swebench`. The two coexist without collision.
    "swebench>=4.0",
]

[project.entry-points."agentix.namespace"]
swebench = "agentix.swebench"

[tool.hatch.build.targets.wheel]
packages = ["src/agentix"]
