[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "eval-cc-swe"
version = "0.1.0"
description = "Evaluate Claude Code on SWE-bench Verified via Agentix"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Agentiix" }]
urls = { Homepage = "https://github.com/Agentiix/agentix-cookbook" }
dependencies = [
    "agentixx>=0.1.0",
    "agentix-runtime-basic>=0.1.0",      # bash inside the sandbox
    "agentix-deployment-docker>=0.1.0",  # local-docker backend for `agentix deploy local`
    "swebench>=4.0",                      # upstream harness (used inside the sandbox)
    "datasets>=2",                        # host-side: load the Verified split
]

[tool.hatch.build.targets.wheel]
only-include = ["cc.py", "swe.py", "runner.py"]
