[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "eval-cc-swe"
version = "0.2.0"
description = "Evaluate Claude Code on SWE-bench Verified via Agentix"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Agentiix" }]
urls = { Homepage = "https://github.com/Agentiix/agentix-cookbook" }
dependencies = [
    "agentixx>=0.2.1",
    "agentix-runtime-basic>=0.1.0",      # bash inside the sandbox
    "agentix-deployment-docker>=0.1.0",  # local-docker backend
    "agentix-bridge>=0.2.0",             # Anthropic↔OpenAI proxy across the sandbox boundary
    "openai>=1.40",                      # host-side: real provider call
    "swebench>=4.0",                     # upstream harness (used inside the sandbox)
    "datasets>=2",                       # host-side: load the Verified split
]

# Pull `agentix-bridge` from github during dev. The `agentix build` Nix
# pipeline patches in hatchling so the sdist build succeeds inside the
# nix sandbox (see `agentix/nix/builder.nix`).
[tool.uv.sources]
agentix-bridge = { git = "https://github.com/Agentiix/abridge.git" }

[tool.hatch.build.targets.wheel]
only-include = ["cc.py", "swe.py", "runner.py"]
